Fix lists width on iphone
git-svn-id: https://subversion.renater.fr/esup-sifacmiss2/trunk@185 1ea0db98-6847-4a72-bad2-ce9059f6f1a9

--- a/esup-sifacmiss2-web-jsf-mixed/src/main/less/iphone/lists.less
+++ b/esup-sifacmiss2-web-jsf-mixed/src/main/less/iphone/lists.less
@@ -3,18 +3,15 @@
   
   // Reset Trinidad's defaults
   table,
+  tbody,
+  tr,
   td {
     width: 100%;
     border: 0;
     background: transparent;
-  }
-  
-  // Fix text overflow
-  table,
-  tbody,
-  tr,
-  td {
-    display: block;
+    padding: 0;
+    margin: 0;
+    display: block; // Fix text overflow
   }
   
   // Rows
